# svm-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
test_results/: linear_model.json  linear_results.csv  poly_model.json  poly_results.csv  rbf_model.json  rbf_model2.json  rbf_results.csv  rbf_results2.csv
test_sets/: infty.csv  labels.csv  linear_test_set.csv  malformed_data.csv  nan.csv  parse_error.csv  poly_test_set.csv  rbf_test_set.csv  rbf_test_set2.csv
