[package]
name = "svm-rs"
version = "0.1.0"
authors = ["ekimglz <mike.glz.96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quadprog-rs = { version = "0.1", path = "../quadprog-rs" }
nalgebra = { version="0.22", features = ["serde-serialize"] }
serde = "1.0"
thiserror = "1.0"
csv = "1.1.3"
itertools = "0.9"
rand = "0.8.0"

[dev-dependencies]
serde_json = "1.0"
serde_yaml = "0.8"
